Refactored the whole API and tests
